# strikecore

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCUMENTATION.md  Dockerfile.backend  Dockerfile.dashboard  Dockerfile.toolbox  Dockerfile.tor  STACK_DECISION.md  docker-compose.override.yml  docker-compose.yml  docker_stack_turnon.txt  install_osint_mega.sh  install_tools.sh  main.py  post-receive  pyproject.toml  requirements.txt  strikecore.sh
.claude/agents/: hephaestus.md
agent/: __init__.py  critic.py  db.py  dossier_flow.py  executor.py  planner.py  tool_gateway.py  trajectory.py  types.py
agents/: binary_agent.py  bugbounty_agent.py  cloud_agent.py  ctf_agent.py  geoint_agent.py  github_scanner_agent.py  osint_agent.py  recon_agent.py  socint_agent.py  webapp_agent.py
cli/: banner.py  controlroom.py  onboarding.py  renderer.py  shell.py
config/: defaults.toml  settings.py
core/: agent.py  agent_events.py  cache.py  contact_validator.py  database.py  dossier_output.py  email_tracker.py  executor.py  fp_filter.py  geoint_apis.py  graph_engine.py  investigation_store.py  ip_logger.py  job_queue.py  nlp_engine.py  number_enumerator.py  pg.py  photo_forensics.py  process_manager.py  provider_router.py  proxy_manager.py  report_builder.py  reset_oracle.py  tool_registry.py  troubleshoot_agent.py
db/: backfill_investigations_jsonb.py  migrate_from_json.py  migrate_from_sqlite.py  schema.sql
docker/: proxychains4.conf  toolbox-entrypoint.sh  tor-entrypoint.sh
docs/: CAPABILITY_AUDIT.md  CONTROL_ROOM.md  HEPHAESTUS.md  HEPHAESTUS_CHANGES.md  INTEGRATION_CONTRACT.md  STACK_IMPLEMENTATION.md
frontend/: app.config.ts  dist  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/composables/: useApi.ts
frontend/layouts/: default.vue
frontend/pages/: agents.vue  email-tracker.vue  geoint.vue  index.vue  infrastructure.vue  tasks.vue  tunnel.vue
governance/: __init__.py  limits.py  model_router.py  prompt_cache.py  token_ledger.py
hephaestus/: __init__.py  agent.py  cli_core.py  discovery.py  reporting.py  run_record.py
intel_team/: __init__.py  orchestrator.py  pir_router.py  quality_gate.py  types.py
intel_team/agents/: __init__.py  analyst.py  audit.py  base.py  geoint.py  socialint.py  socint.py  webint.py
intel_team/prompts/: analyst.md  audit.md  geoint.md  pir_router.md  socialint.md  socint.md  webint.md
intelligence/: api_integrations.py  cve_manager.py  decision_engine.py  vuln_correlator.py
log_system/: __init__.py  audit.py  logger.py  reporter.py
messaging/: __init__.py  telegram_bot.py  whatsapp_bot.py
ops/systemd/: strikecore-backend.service
osint_agent/dashboard/: app.py  app.py.bak2  app.py.bak3
prompts/: dossier_luigisav.md  dossier_template.md
providers/: __init__.py  anthropic_provider.py  base.py  generic_openai.py  lmstudio_provider.py  ollama_provider.py  openrouter_provider.py  vllm_provider.py
reports/: luigi_savino_breach_report.md  luigi_savino_graph.html
schema/: hephaestus.run_record.schema.json  io.envelope.schema.json  tool.manifest.schema.json
tests/: conftest.py  dossier_dryrun.py  test_agent_events.py  test_control_room.py  test_dashboard_hephaestus.py  test_dossier_output.py  test_executor_env.py  test_hephaestus_agent_run.py  test_hephaestus_cli_core.py  test_hephaestus_console.py  test_hephaestus_dossier_improve.py  test_hephaestus_reporting.py  test_model_cmd.py  test_model_router.py  test_registry_gr5.py  test_router_chat.py  test_router_stream.py  test_troubleshoot_agent.py
toolbox/: worker.py
tools/_template/: README.md  install.sh  sc-TEMPLATE.py  tool.manifest.json
tools/cf-validate/: README.md  install.sh  sc-cf-validate.py  tool.manifest.json
tools/lib/: sctool.py
voip/: docker-compose.yml
(+48 files in other folders)
